add UserRole (PROPRIETAIRE/SAMSAR) with role selection on registration, role-based UI, fix shared-houses route